# simplisp

./: Cargo.toml
src/: lib.rs
src/error/: beginning_string_in_word.rs  empty_escape_sequence.rs  empty_string_detected.rs  error_wrapper.rs  invalid_escape_sequence.rs  invalid_execution_tree_object_conversion.rs  invalid_previous_char.rs  lisp_error.rs  lisp_result.rs  mod.rs  multiple_characters_in_single_quotes.rs  no_character_in_single_quotes.rs  no_closing_double_quote.rs  no_closing_double_quote_in_execution_tree.rs  no_closing_parenthesis.rs  no_closing_single_quote.rs  no_closing_single_quote_in_execution_tree.rs  no_last_char.rs  no_program_start_parenthesis.rs  numeric_token_cannot_be_parsed.rs  symbol_not_on_stack.rs  wrap_err.rs  wrap_error.rs
src/lisp/: abstract_syntax_tree.rs  abstract_syntax_tree_node.rs  abstract_syntax_tree_object.rs  environment.rs  execution_tree.rs  execution_tree_node.rs  execution_tree_object.rs  frame.rs  last_char_type.rs  mod.rs  symbol.rs
src/string/: mod.rs
src/string/error/: beginning_string_in_word.rs  empty_escape_sequence.rs  empty_string_detected.rs  invalid_escape_sequence.rs  invalid_execution_tree_object_conversion.rs  invalid_previous_char.rs  mod.rs  multiple_characters_in_single_quotes.rs  no_character_in_single_quotes.rs  no_closing_double_quote.rs  no_closing_double_quote_in_execution_tree.rs  no_closing_parenthesis.rs  no_closing_single_quote.rs  no_closing_single_quote_in_execution_tree.rs  no_last_char.rs  no_program_start_parenthesis.rs  numeric_token_cannot_be_parsed.rs  symbol_not_on_stack.rs
